# reshape-python

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yaml
reshape_helper/: __init__.py  schema_query.py
tests/: test_schema_query.py
tests/fixtures/custom-migration-name/: 2_test_migration_with_custom_name.toml
