[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reshape-helper"
version = "0.1.0"
authors = [
  { name="Fabian Lindfors", email="fabian@flapplabs.se" },
]
description = "A Python helper library for applications using Reshape"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "natsort",
    "toml",
]

[project.urls]
"Homepage" = "https://github.com/fabianlindfors/reshape-python"
"Bug Tracker" = "https://github.com/fabianlindfors/reshape-python/issues"